# B04-405_Bozhko

./: 1 задание 1 неделя.py  2 домашка эдмондс карп.py  3 задание.py  index.html  Алгоритм Джонсона 1 неделя.py
1 домашка/: 3 задание.py
1 сем 1 неделя/: 1 задание.py  3 задание.py
1 сем 11 неделя/: 1 задание.py  2 задание.py  3 задание.py  4 задание.py
1 сем 2 неделя/: 2 задание.py  3 задание.py  4 задание.py  6 задание.py  7 задание.py  8 задание.py  Согласие.docx
1 сем 3 неделя/: 1 задание.py  3 задание.py
1 сем 4 неделя/: 1 задание.py  8 задание.py
1 сем 6 неделя/: 1 задание.py  3 задание.py  4 задание.py  5 задание.py
1 сем 9 неделя/: 1 задание.py  2 задание.py
2 домашка/: 2 домашка номер 2.py
3 домашка/: 3 домашка 1 задание.py  3 домашка 2 задание.py  3 домашка 3 задание.py  3 домашка 4 задание.py
Арбитраж/spread_radar/: CMakeLists.txt
Арбитраж/spread_radar/src/: main.cpp
Арбитраж/spread_radar/src/bot/: TelegramBot.cpp  TelegramBot.h
Арбитраж/spread_radar/src/config/: BotConfig.h
Арбитраж/spread_radar/src/core/: Fee.h  SimulationResult.h  SpreadCalculator.cpp  SpreadCalculator.h  TokenPrice.h
Арбитраж/spread_radar/src/exchange/: BinanceClient.cpp  BinanceClient.h  CoinbaseClient.cpp  CoinbaseClient.h  KrakenClient.cpp  KrakenClient.h  PriceProvider.h
Арбитраж/spread_radar/src/handlers/: BotHandlers.cpp  BotHandlers.h
Арбитраж/spread_radar/src/keyboards/: InlineKeyboards.cpp  InlineKeyboards.h
Арбитраж/spread_radar/src/services/: SpreadService.cpp  SpreadService.h
Арбитраж/spread_radar/src/utils/: HttpClient.cpp  HttpClient.h
(+50 files in other folders)
